[package]
name = "master_mind_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
clap = {version = "4.4.18", features = ["derive"]}
log = "0.4.20"
env_logger = "0.11.2"
hashbrown = "0.14.3"
